<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="network_settings">Network Settings</string>
    <string name="image_sound">Display and Sound</string>
    <string name="area_time">Area and Time</string>
    <string name="about">About</string>
    <string name="system_settings">System Settings</string>
    <string name="system_update">System update</string>
    <string name="user_feedback">User feedback</string>
    <string name="projection_settings">Projection Settings</string>
    <string name="area_time_settings">Area and Time Settings</string>
    <string name="language_settings">Language Settings</string>
    <string name="inputmethod_settings">InputMethod Settings</string>
    <string name="device_name">Device Name</string>
    <string name="device_model">Release Notes</string>
    <string name="device_default_name">System Default Name</string>
    <string name="button_ok">OK</string>
        <string name="disable_input_null">the device name can not be null,please input again</string>
        <string name="string_outbound">the max length of device name is 20</string>
    <string name="zh_cn">中文 (中国)</string>
    <string name="zh_tw">中文 (台灣)</string>
    <string name="install_location">Application install location</string>
    <string name="install_location_auto">System decision</string>
    <string name=" install_location_usb">USB Mass Storage</string>
    <string name="install_location_toast">External USB storage device is limited to FAT32 format</string>
    <string name="install_location_internal">internal storage</string>
    <string name="install_location_sdcard">SDcard</string>
     <string name="app_white_list">App white List</string>
    <string name="screen_settings">Screen Settings</string>
    <string name="screen_scale">Screen Zoom</string>
    <string name="screen_translate">Screen Position</string>
    <string name="screen_zoom_title">press left key and right key to control the screen size</string>
    <string name="screen_position_title">press direction key to control the screen postion</string>
    <string name="sound_settings">Sound Settings</string>
    <string name="key_tone">Key Tone</string>
    <string name="notification_tone">Notification Tone</string>
    <string name="display_and_sound">Disaplay and Sound</string>
    <string name="sound">Sound</string>
    <string name="say_your_suggestion">Please tell your valuable views on it</string>
    <string name="bugreport_title">User Feedback</string>
    <string name="shortcut_title">Shortcut Feedback</string>
    <string name="choose_shortcut_feedback">Please choose shortcut feedback</string>
    <string name="feedback_record">Feedback Record</string>
    <string name="dealing">Dealing</string>
    <string name="acceptted">Acceptted</string>
    <string name="resolved">Resolved</string>
    <string name="thanks">Thanks for your feedback</string>
    <string name="published">Published</string>
    <string name="submit">Submit</string>
    <string name="submitted">Submitted</string>
    <string name="bugreport_upload_success">Upload the log file successfully!</string>
    <string name="bugreport_upload_failed">Upload the log files failed and save the files to the dir "/sdcard/syslog/"!</string>
    <string name="bugreport_exception">Get logs, Exception!</string>
    <string name="bugreport_uploading">Log file is uploading!</string>
    <string name="bugreport_empty">Please enter the opinion after confirmation!</string>
    <string name="network_disconnected">Check network status please!</string>
    <string name="bugreport_surplus_char">Surplus Character:</string>
    <string name="bugreport_limit">The Characters have reached the limitation</string>
    <string name="about_model">Model</string>
    <string name="about_build_number">Build Number</string>
    <string name="about_build_model">Build Model</string>
    <string name="about_serial_number">Serial number</string>
    <string name="about_storage_info">Storage</string>
    <string name="about_more_info">More</string>
    <string name="about_more_information">More infomation</string>
    <string name="about_more_cpu">CPU</string>
    <string name="about_more_ram">RAM</string>
    <string name="about_more_flash">FLASH</string>
    <string name="about_more_mac">MAC Address</string>
    <string name="about_more_device_id">Device ID</string>
    <string name="about_more_up_time">Up time</string>
    <string name="about_more_version">Android Version</string>
    <string name="about_more_up_version_real_key">Scifly Version</string>
    <string name="network_setting">Network setting</string>
    <string name="wireless_setting">Wireless setting</string>
    <string name="network_diag">Network diagnose</string>
    <string name="next"> > </string>
    <string name="network_connection">Network connectivity</string>
    <string name="time_sync">Time sync</string>
    <string name="begin_diag">Begin diagnose</string>
    <string name="static_info">Static information</string>
    <string name="error_detail">Error details</string>
    <string name="network_return">Return</string>
    <string name="localhost">Localhost</string>
    <string name="gateway">Gateway</string>
    <string name="center_network">Center network</string>
    <string name="time_server">Time server</string>
    <string name="show_static_info">Show static information</string>
    <string name="point"> ● </string>
    <string name="access_way">Access way</string>
    <string name="IP_address">IP address</string>
    <string name="gateway_address">Gateway address</string>
    <string name="error_code">Error code</string>
    <string name="error_description">Error description</string>
    <string name="connection_normal">The network connection is normal</string>
    <string name="connection_fail">The network connection is abnormal</string>
    <string name="colon">：</string>
    <string name="begin_download_speed">Begin test speed</string>
    <string name="fail_obtain_time">Fail to get time from NTP</string>
    <string name="fail_download_speed">Failure of speed</string>
    <string name="system_time">System time</string>
    <string name="network_time">Network time</string>
    <string name="NTP_Server">NTP Server</string>
    <string name="begin_time_sync">Begin time sync</string>
    <string name="download_speeding">Testing speed……</string>
    <string name="obtain_time">Getting time from NTP Server……</string>
    <string name="max_download_speed">The maximum speed</string>
    <string name="min_download_speed">The minimum speed</string>
    <string name="average_download_speed">The average speed</string>
    <string name="time_sync_success">Time sync success</string>
    <string name="description">picture</string>
    <string name="local_network_conn_error">The localhost is abnormal</string>
    <string name="center_network_error">The center network is abnormal</string>
    <string name="server_error">The time server is abnormal</string>
    <string name="gateway_error">The gateway is abnormal</string>
    <string name="download_speed_complete">Finish test speed! </string>
    <string name="date_format">MM/dd/yyyy EEE HH:mm</string>
    <string name="old_week">></string>
    <string name="new_week">></string>
    <string name="connect_network">Please connect network first</string>
    <string name="null_address">0.0.0.0</string>
    <string name="null_access_way">DHCP</string>
    <string name="master_clear_title">Factory data reset</string>
    <string name="master_clearing_title">Restore to factory settings</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">Cancel</string>
    <string name="system_recovery">System Recovery</string>
    <string name="erase_all_data">Erase all data</string>
    <string name="erase_data_going" >Erasing data&#8230;</string>
    <string name="version_checking">Checking&#8230;</string>
    <string name="recovery">Factory data reset</string>
    <string name="sdcard_lable">Sdcard</string>
    <string name="mobile_stoarge_device">Mobile storage device</string>
    <string name="system_local_update">System local update</string>
    <string name="check_directry">Please check your deposit directory whether for Mobile Device, filename is: update_signed. Zip</string>
    <string name="select_updatezip">Please choose update package：</string>
    <string name="check_updatezip">Find update package,do you update?</string>
    <string name="no_update_file">Your Mobile Device without the latest on the image files</string>
    <string name="new_version">New version：</string>
    <string name="update_list">New version content：</string>
    <string name="download">Download</string>
    <string name="latest">Your TVOS version has is the latest version!</string>
    <string name="download_error">Download appear in the process of the error, please
        download again</string>
    <string name="redownload">redownload</string>
    <string name="check_failure">In the process of installation errors, please
        replace update package.</string>
    <string name="updated">Please restart the TV, to update the program will
        continue to restart......</string>
    <string name="check_success">check success。</string>
    <string name="check_version_fail">Check Version fail!</string>
    <string name="update_disconnect_wifi"> Please check whether the network is already connected!</string>
    <string name="system_net_update">System net update</string>
    <string name="current_version">Current version：</string>
    <string name="checking_cache">Checking cache......</string>
    <string name="no_new_version_available">No new version available!</string>
    <string name="ntfs_unsupported">Local upgrade didn\'t support the NTFS device, please confirm the OTA package is in a FAT32 device</string>
    <string name="sdcard">Are testing Mobile Device......</string>
    <string name="downloading">Downloading new version......</string>
    <string name="download_ing">Downloading</string>
    <string name="check_package">Calibration update package...... </string>
    <string name="ethernet_setting">Ethernet Settings</string>
    <string name="download_speed">Download Speed Test</string>
    <string name="blue_tooth">Bluetooth</string>
    <string name="screen_display">Screen Display</string>
    <string name="wlan">Portable hotspot</string>
    <string name="open_wlan">Enable hotspot</string>
    <string name="network_ssid">SSID</string>
    <string name="screen_display_help">Screen display help</string>
    <string name="screendisplay_wifi_massage">WiFi is not open, whether to open immediately?</string>
    <string name="help_information_1">1 different mobile phone screen display name is different. In general, the "mobile phone network settings", called "multi screen interaction", "wireless display", "Screen Mirroring" or "WLAN connection" etc.</string>
    <string name="help_information_2">2 if the connection fails, or can not find the device, you may not support the mobile phone screen display function.</string>
    <string name="wifi_dns">DNS</string>
    <string name="wifi_mask">Subnet Mask</string>
    <string name="wifi_button_ok">OK</string>
    <string name="wifi_button_cancle">Cancel</string>
    <string name="wifi_link_property_ip_get">Way to get ip</string>
    <string name="wifi_security">Security</string>
    <string name="wifi_password">Password</string>
    <string name="wifi_advanced_mac_address_title">MAC address</string>
    <string name="wifi_gateway">Gateway</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="screen_saver_setting">Screensaver Settings</string>
    <string name="pppoe_settings_title">PPPoE settings</string>
     <string name="localupdate">Local Update</string>
</resources>