<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.android.settings" >

    <com.android.settings.SettingPreference
        android:key="wired"
        android:title="@string/ethernet_setting"
        app:type="two_column" />
    <com.android.settings.SettingPreference
        android:key="wifi"
        android:title="@string/wireless_setting"
        app:type="two_column" />
    <com.android.settings.SettingPreference
        android:key="localupdate"
        android:title="@string/localupdate"
        app:type="two_column" />
    <com.android.settings.SettingPreference
        android:key="mac_address"
        android:title="@string/wifi_advanced_mac_address_title"
        app:type="two_column" />
    <com.android.settings.SettingPreference
        android:key="deviceId"
        android:title="@string/about_build_number"
        app:type="two_column" />

</PreferenceScreen>