<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_bg"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <com.android.settings.widget.TitleWidget
        android:id="@+id/title_widget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/static_info" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="50dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/IP_address"
                    android:textColor="#cccccc"
                    android:textSize="23sp" />

                <TextView
                    android:id="@+id/tv_ip_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="40dp"
                    android:text="@string/null_address"
                    android:textColor="#cccccc"
                    android:textSize="23sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gateway_address"
                    android:textColor="#cccccc"
                    android:textSize="23sp" />

                <TextView
                    android:id="@+id/tv_gateway_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="40dp"
                    android:text="@string/null_address"
                    android:textColor="#cccccc"
                    android:textSize="23sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/access_way"
                    android:textColor="#cccccc"
                    android:textSize="23sp" />

                <TextView
                    android:id="@+id/tv_accessway"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="40dp"
                    android:text="@string/null_access_way"
                    android:textColor="#cccccc"
                    android:textSize="23sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_begin_diag"
        android:layout_width="157dp"
        android:layout_height="54dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_selector"
        android:text="@string/begin_diag"
        android:textColor="#000000"
        android:textSize="23sp" />

</LinearLayout>