<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/WIFI_SCREEN_DISPLAY_DIALOG_WIDTH"
    android:layout_height="@dimen/WIFI_SCREEN_DISPLAY_DIALOG_HEIGHT"
    android:background="@drawable/wifi_password_input_shape"
    android:orientation="vertical"
    android:padding="30dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/screendisplay_wifi_massage"
            android:textAppearance="?android:attr/textAppearanceLarge"  />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20dp" >

        <Button
            android:id="@+id/wifi_button_ok"
            android:layout_width="110dp"
            android:layout_height="54dp"
            android:background="@drawable/button_selector"
            android:text="@string/wifi_button_ok"
            android:textColor="#000000" />

        <Button
            android:id="@+id/wifi_button_cancle"
            android:layout_width="110dp"
            android:layout_height="54dp"
            android:background="@drawable/button_selector"
            android:text="@string/wifi_button_cancle"
            android:textColor="#000000" />
    </LinearLayout>

</LinearLayout>