<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.android.settings.widget.TitleWidget
        android:id="@+id/activity_bugreport_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <LinearLayout
            android:id="@+id/ll_device_id"
            android:layout_width="600dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/et_bugport_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_more_device_id"
                android:textColor="@color/green"
                android:textSize="21sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                android:textColor="@color/green"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/tv_device_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="21sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/shortcut_tips"
            android:layout_width="600dp"
            android:layout_height="48dp"
            android:layout_below="@id/ll_device_id"
            android:layout_centerHorizontal="true"
            android:background="@drawable/activity_bugreport_textview_bg"
            android:drawableRight="@drawable/arrow_right_white"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:textColor="@android:color/white"
            android:text="@string/choose_shortcut_feedback"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/et_bugport_content"
            android:layout_width="600dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shortcut_tips"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_bg"
            android:gravity="top|left"
            android:hint="@string/say_your_suggestion"
            android:maxLines="6"
            android:minHeight="150dp" />

        <TextView
            android:id="@+id/tv_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/et_bugport_content"
            android:layout_below="@id/et_bugport_content"
            android:layout_marginRight="3dp"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_bugport_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_bugreport_submit"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="157dp"
                android:layout_height="54dp"
                android:background="@drawable/button_selector"
                android:text="@string/submit"
                android:textColor="@drawable/activity_bugreport_color_selector"
                android:textSize="23sp" />

            <Button
                android:id="@+id/btn_bugreport_record"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="157dp"
                android:layout_height="54dp"
                android:layout_marginLeft="120dp"
                android:background="@drawable/button_selector"
                android:text="@string/feedback_record"
                android:textColor="@drawable/activity_bugreport_color_selector"
                android:textSize="23sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>